--- a/src/konwentor/application/templates/convent/home.jinja2
+++ b/src/konwentor/application/templates/convent/home.jinja2
@@ -2,7 +2,7 @@
 {% block page_head -%}
     Konwenty
 {%- endblock %}
-{% block body %}
+{% block content %}
     <div class="row">
         <div class="col-lg-12">
             <ul>
