--- a/src/konwentor/application/templates/main.jinja2
+++ b/src/konwentor/application/templates/main.jinja2
@@ -26,7 +26,7 @@
                             </a>
                         </li>
                         <li class="divider"></li>
-                        <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        <li><a href="{{route('auth:logout')}}"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
                     </ul>
                     <!-- /.dropdown-user -->
