Adding convents form.

--- a/src/konwentor/application/templates/convent/home.jinja2
+++ b/src/konwentor/application/templates/convent/home.jinja2
@@ -1,6 +1,6 @@
 {% extends "main.jinja2" %}
 {% block page_head -%}
-    Konwenty
+    Konwenty - <small><a href="{{route('convent:add')}}">Dodaj</a></small>
 {%- endblock %}
 {% block content %}
     <div class="row">
