--- a/src/konwentor/application/templates/main.jinja2
+++ b/src/konwentor/application/templates/main.jinja2
@@ -4,15 +4,6 @@
 
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{{route('convent:home')}}">Konwentor</a>
-            </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
@@ -39,7 +30,7 @@
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li>
-                            <a class="active" href="{{route('convent:home')}}">
+                            <a class="active" href="{{route('convent:list')}}">
                                 <i class="fa fa-dashboard fa-fw"></i> Dashboard
                             </a>
                         </li>
