--- a/src/konwentor/application/templates/auth/login.jinja2
+++ b/src/konwentor/application/templates/auth/login.jinja2
@@ -15,17 +15,13 @@
                     <div class="panel-heading">
                         <h3 class="panel-title">Proszę się zalogować</h3>
                     </div>
+                    {{FK.FormError(form)}}
                     <div class="panel-body">
                         {{FK.StartForm(form)}}
                             <fieldset>
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
-                                </div>
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="Hasło" name="password" type="password" value="">
-                                </div>
-                                <!-- Change this to a button or input when using this as a form -->
-                                <button class="btn btn-lg btn-success btn-block">Zaloguj</button>
+                                {{FK.LoginText(form, 'email', 'E-mail', 'email', True)}}
+                                {{FK.LoginPassword(form, 'password', 'Hasło',)}}
+                                {{FK.LoginButton(form, 'Zaloguj')}}
                             </fieldset>
                         {{FK.StopForm()}}
                     </div>
