--- a/src/konwentor/application/templates/convent/add.jinja2
+++ b/src/konwentor/application/templates/convent/add.jinja2
@@ -14,10 +14,10 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-lg-6">
-                            {{form.begin()|safe}}
-                                {{form.text('name')|safe}}
-                                {{form.submit('Dodaj')|safe}}
-                            {{form.end()|safe}}
+                            {{form.begin()}}
+                                {{form.text('name')}}
+                                {{form.submit('Dodaj')}}
+                            {{form.end()}}
                         </div>
                     </div>
                 </div>
