--- a/src/konwentor/application/templates/forms/submit.jinja2
+++ b/src/konwentor/application/templates/forms/submit.jinja2
@@ -1,1 +1,1 @@
-<button type="submit" class="btn btn-lg btn-success">{{label}}</button>
+<button type="submit" class="btn btn-lg {{class}}">{{label}}</button>
