Added boardgame app and menu widget.

--- a/src/konwentor/application/templates/main.jinja2
+++ b/src/konwentor/application/templates/main.jinja2
@@ -26,18 +26,7 @@
             </ul>
             <!-- /.navbar-top-links -->
 
-            <div class="navbar-default sidebar" role="navigation">
-                <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
-                        <li>
-                            <a class="active" href="{{route('convent:list')}}">
-                                <i class="fa fa-dashboard fa-fw"></i> Dashboard
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- /.sidebar-collapse -->
-            </div>
+            {{menu()}}
         </nav>
 
         <div id="page-wrapper">
