--- a/src/konwentor/application/templates/main.jinja2
+++ b/src/konwentor/application/templates/main.jinja2
@@ -4,6 +4,10 @@
 
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="{{route('convent:list')}}">Konwentor</a>
+            </div>
+
             <!-- Top Menu Items -->
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
