--- a/src/konwentor/application/templates/convent/home.jinja2
+++ b/src/konwentor/application/templates/convent/home.jinja2
@@ -1,13 +1,17 @@
 {% extends "main.jinja2" %}
 {% block page_head -%}
-    Konwenty - <small><a href="{{route('convent:add')}}">Dodaj</a></small>
+    Konwenty {% if user.has_access_to_route('convent:add') -%}
+        - <small><a href="{{route('convent:add')}}">Dodaj</a></small>
+    {%- endif %}
 {%- endblock %}
 {% block content %}
     <div class="row">
         <div class="col-lg-12">
             <ul>
                 {%- for convent in convents %}
-                    <li>{{convent.name}} <a  href="{{route('convent:delete', obj_id=convent.id)}}" class="btn btn-xs btn-danger">[x]</a></li>
+                    <li>{{convent.name}}  {% if user.has_access_to_route('convent:delete') -%}
+                        <a href="{{route('convent:delete', obj_id=convent.id)}}" class="btn btn-xs btn-danger">[x]</a>
+                    {%- endif %}</li>
                 {%- endfor %}
             </ul>
         </div>
