--- a/src/konwentor/application/templates/game/list.jinja2
+++ b/src/konwentor/application/templates/game/list.jinja2
@@ -1,13 +1,17 @@
 {% extends "main.jinja2" %}
 {% block page_head -%}
-    Gry - <small><a href="{{route('game:add')}}">Dodaj</a></small>
+    Gry {% if user.has_access_to_route('game:add') -%}
+        - <small><a href="{{route('game:add')}}">Dodaj</a></small>
+    {%- endif %}
 {%- endblock %}
 {% block content %}
     <div class="row">
         <div class="col-lg-12">
             <ul>
                 {%- for object in objects %}
-                    <li>{{object.name}} <a  href="{{route('game:delete', obj_id=object.id)}}" class="btn btn-xs btn-danger">[x]</a></li>
+                    <li>{{object.name}} {% if user.has_access_to_route('game:delete') -%}
+                        <a href="{{route('game:delete', obj_id=object.id)}}" class="btn btn-xs btn-danger">[x]</a>
+                    {%- endif %}</li>
                 {%- endfor %}
             </ul>
         </div>
