--- a/src/konwentor/application/templates/main.jinja2
+++ b/src/konwentor/application/templates/main.jinja2
@@ -43,6 +43,8 @@
                 <!-- /.col-lg-12 -->
             </div>
 
+            {{flashmsg()}}
+
             {% block content %}{% endblock %}
 
         </div>
