--- a/src/konwentor/application/templates/head.jinja2
+++ b/src/konwentor/application/templates/head.jinja2
@@ -48,6 +48,7 @@
     <!-- Metis Menu Plugin JavaScript -->
     <script src="{{static('/js/plugins/metisMenu/metisMenu.min.js')}}"></script>
 
+    {% block js %}{% endblock %}
     <!-- Custom Theme JavaScript -->
     <script src="{{static('/js/sb-admin-2.js')}}"></script>
 </body>
