--- a/src/konwentor/application/templates/gamecopy/list.jinja2
+++ b/src/konwentor/application/templates/gamecopy/list.jinja2
@@ -35,8 +35,8 @@
                             <tbody>
                                 {% for game in games %}
                                     <tr>
-                                        <td>{{game[0]}}</td>
-                                        <td>{{game[1]}}</td>
+                                        <td>{{game.name}}</td>
+                                        <td>{{game.author_name}}</td>
                                         <td>{{game.count}}</td>
                                         <td>?</td>
                                     </tr>
