--- a/src/konwentor/application/templates/menu/main.jinja2
+++ b/src/konwentor/application/templates/menu/main.jinja2
@@ -3,7 +3,7 @@
         <ul class="nav" id="side-menu">
             {% for object in menu %}
                 {% if object.is_visible() -%}
-                    <li>
+                    <li class="active">
                         <a {%- if object.is_highlited() %} class="active"{% endif %} href="{{object.get_url()}}">
                             <i class="fa {{object.get_icon()}} fa-fw"></i> {{object.name}}
                             {%- if object.childs %}<span class="fa arrow"></span>{% endif -%}
