--- a/src/konwentor/application/templates/game_borrow/list.jinja2
+++ b/src/konwentor/application/templates/game_borrow/list.jinja2
@@ -4,43 +4,52 @@
     Gry na konwencie
 {%- endblock %}
 
+{% macro header() -%}
+    <tr>
+        <th>Nazwa</th>
+        <th>Właściciel</th>
+        <th>Imię</th>
+        <th>Nazwisko</th>
+        <th>Kiedy</th>
+        <th>Dokument</th>
+        <th>Akcje</th>
+    </tr>
+{%- endmacro %}
+
+{% macro tableinit(header) -%}
+    <thead>
+        {{header()}}
+    </thead>
+
+    <tfoot>
+        {{header()}}
+    </tfoot>
+{%- endmacro %}
+
 {% block content %}
     <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Lista gier - <strong>{{convent.name}}</strong>
+                    Lista wypożyczonych gier - <strong>{{convent.name}}</strong>
                 </div>
                 <div class="panel-body">
                     <div class="table-responsive">
                         <table id="games_on_convent_table" class="table table-striped table-bordered table-hover">
-                            <thead>
-                                <tr>
-                                    <th>Nazwa</th>
-                                    <th>Właściciel</th>
-                                    <th>Ilość kopii</th>
-                                    <th>Akcje</th>
-                                </tr>
-                            </thead>
-
-                            <tfoot>
-                                <tr>
-                                    <th>Nazwa</th>
-                                    <th>Właściciel</th>
-                                    <th>Ilość kopii</th>
-                                    <th>Akcje</th>
-                                </tr>
-                            </tfoot>
+                            {{tableinit(header)}}
 
                             <tbody>
-                                {% for game in games %}
+                                {% for borrow in borrows %}
                                     <tr>
-                                        <td>{{game.name}}</td>
-                                        <td>{{game.author_name}}</td>
-                                        <td>{{game.count}}</td>
+                                        <td>{{borrow.gameentity.gamecopy.game.name}}</td>
+                                        <td>{{borrow.gameentity.gamecopy.owner.name}}</td>
+                                        <td>{{borrow.name}}</td>
+                                        <td>{{borrow.surname}}</td>
+                                        <td>{{borrow.borrowed_timestamp.strftime ("%Y-%m-%d %H:%M:%S")}}</td>
+                                        <td>{{borrow.document_number}} ({{borrow.document_type}})</td>
                                         <td>
-                                            {% if user.has_access_to_route('gameborrow:add') -%}
-                                                <a href="{{route('gameborrow:add', obj_id=game.id)}}" class="btn btn-xs btn-success">Wypożycz</a>
+                                            {% if user.has_access_to_route('gameborrow:return') -%}
+                                                <a href="{{route('gameborrow:return', obj_id=borrow.id)}}" class="btn btn-xs btn-warning">Zwrócono</a>
                                             {%- endif %}
                                         </td>
                                     </tr>
