--- a/src/konwentor/application/templates/gamecopy/add.jinja2
+++ b/src/konwentor/application/templates/gamecopy/add.jinja2
@@ -15,6 +15,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             {{form.begin()}}
+                                {{form.error()}}
                                 {{form.select('game_id')}}
                                 {{form.select('user_id')}}
                                 {{form.select('convent_id')}}
