--- a/src/konwentor/application/templates/gamecopy/list.jinja2
+++ b/src/konwentor/application/templates/gamecopy/list.jinja2
@@ -4,6 +4,16 @@
     Gry na konwencie
 {%- endblock %}
 
+{% macro header() %}
+    <tr>
+        <th>Nazwa</th>
+        <th>Właściciel</th>
+        <th>Ilość kopii</th>
+        <th>Wypożyczono</th>
+        <th>Akcje</th>
+    </tr>
+{% endmacro %}
+
 {% block content %}
     <div class="row">
         <div class="col-lg-12">
@@ -15,21 +25,11 @@
                     <div class="table-responsive">
                         <table id="games_on_convent_table" class="table table-striped table-bordered table-hover">
                             <thead>
-                                <tr>
-                                    <th>Nazwa</th>
-                                    <th>Właściciel</th>
-                                    <th>Ilość kopii</th>
-                                    <th>Akcje</th>
-                                </tr>
+                                {{header()}}
                             </thead>
 
                             <tfoot>
-                                <tr>
-                                    <th>Nazwa</th>
-                                    <th>Właściciel</th>
-                                    <th>Ilość kopii</th>
-                                    <th>Akcje</th>
-                                </tr>
+                                {{header()}}
                             </tfoot>
 
                             <tbody>
@@ -37,10 +37,13 @@
                                     <tr>
                                         <td>{{game.name}}</td>
                                         <td>{{game.author_name}}</td>
-                                        <td>{{game.count}}</td>
+                                        <td>{{game.GameEntity.count}}</td>
+                                        <td>{{game.GameEntity.active_borrows_len()}}</td>
                                         <td>
-                                            {% if user.has_access_to_route('gameborrow:add') -%}
-                                                <a href="{{route('gameborrow:add', obj_id=game.id)}}" class="btn btn-xs btn-success">Wypożycz</a>
+                                            {% if game.GameEntity.is_avalible() -%}
+                                                {% if user.has_access_to_route('gameborrow:add') -%}
+                                                    <a href="{{route('gameborrow:add', obj_id=game.GameEntity.id)}}" class="btn btn-xs btn-success">Wypożycz</a>
+                                                {%- endif %}
                                             {%- endif %}
                                         </td>
                                     </tr>
