Added name of a game on borrowing screen.

--- a/src/konwentor/application/templates/game_borrow/add.jinja2
+++ b/src/konwentor/application/templates/game_borrow/add.jinja2
@@ -9,7 +9,7 @@
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Wypożyczenie
+                    Wypożyczenie - <strong>{{game_entity.gamecopy.game.name}}</strong>
                 </div>
                 <div class="panel-body">
                     <div class="row">
