--- a/src/konwentor/application/templates/gamecopy/list.jinja2
+++ b/src/konwentor/application/templates/gamecopy/list.jinja2
@@ -14,6 +14,12 @@
     </tr>
 {% endmacro %}
 
+{% macro color_tr(entity) %}
+    {%- if not entity.is_avalible() %} class="danger"
+    {%- elif entity.active_borrows_len() == 0 %} class="info"
+    {%- endif -%}
+{% endmacro %}
+
 {% block content %}
     <div class="row">
         <div class="col-lg-12">
@@ -34,7 +40,7 @@
 
                             <tbody>
                                 {% for game in games %}
-                                    <tr>
+                                    <tr{{color_tr(game.GameEntity)}}>
                                         <td>{{game.name}}</td>
                                         <td>{{game.author_name}}</td>
                                         <td>{{game.GameEntity.count}}</td>
