Add history of borrows.

--- a/src/konwentor/application/templates/game/list.jinja2
+++ b/src/konwentor/application/templates/game/list.jinja2
@@ -20,7 +20,7 @@
 {%- endmacro %}
 
 {% block content %}
-    {% call(game) table(title, header, objects, "games_table") %}
+    {% call(game, index) table(title, header, objects, "games_table") %}
         <tr>
             <td>{{game.name}}</td>
             <td>
