--- a/src/konwentor/application/templates/table.jinja2
+++ b/src/konwentor/application/templates/table.jinja2
@@ -16,7 +16,7 @@
 
                             <tbody>
                                 {% for obj in objects %}
-                                    {{caller(obj)}}
+                                    {{caller(obj, loop.revindex)}}
                                 {% endfor %}
                             </tbody>
                         </table>
