--- a/src/konwentor/application/templates/statistics/games_table.jinja2
+++ b/src/konwentor/application/templates/statistics/games_table.jinja2
@@ -10,7 +10,7 @@
 {% macro title() -%}Najczęściej wypożyczane gry{%- endmacro %}
 
 {% macro games_table(statistics, id) %}
-    {% call(stat) table(title, header, statistics, id) %}
+    {% call(stat, index) table(title, header, statistics, id) %}
         <tr>
             <td>{{stat.name}}</td>
             <td>{{stat.borrows}}</td>
