--- a/src/konwentor/application/templates/statistics/main_table.jinja2
+++ b/src/konwentor/application/templates/statistics/main_table.jinja2
@@ -12,7 +12,7 @@
 {%- endmacro %}
 
 {% macro main_table(statistics, id) %}
-    {% call(stat) table(title, header, statistics, id) %}
+    {% call(stat, index) table(title, header, statistics, id) %}
         <tr>
             <td>{{stat['name']}}</td>
             <td>{{stat['value']}}</td>
