--- a/src/konwentor/application/templates/statistics/people_table.jinja2
+++ b/src/konwentor/application/templates/statistics/people_table.jinja2
@@ -13,7 +13,7 @@
 {% macro title() -%}Najczęściej wypożyczających{%- endmacro %}
 
 {% macro people_table(statistics, id) %}
-    {% call(stat) table(title, header, statistics, id) %}
+    {% call(stat, index) table(title, header, statistics, id) %}
         <tr>
             <td>{{stat.name}}</td>
             <td>{{stat.surname}}</td>
