--- a/src/konwentor/application/templates/convent/list.jinja2
+++ b/src/konwentor/application/templates/convent/list.jinja2
@@ -1,4 +1,6 @@
 {% extends "main.jinja2" %}
+{% from "table.jinja2" import table %}
+
 {% block page_head -%}
     Konwenty {% if user.has_access_to_route('convent:add') -%}
         - <small><a href="{{route('convent:add')}}">Dodaj</a></small>
@@ -14,38 +16,33 @@
 {%- endmacro %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                    <div class="table-responsive">
-                        <table id="games_on_convent_table" class="table table-striped table-bordered table-hover">
-                            <thead>
-                                {{ header() }}
-                            </thead>
-                            <tfoot>
-                                {{ header() }}
-                            </tfoot>
+    {% call(convent, index) table(False, header, convents, "convents_table") %}
+        <tr{%- if choosed_id == convent.id %} class="danger" {% endif -%}>
+            <td>
+                {{convent.name}}
+            </td>
+            <td>
+                {{convent.state}}
+            </td>
+            <td>
+                {{convent.switch()}}
+                {{convent.delete()}}
+                {{convent.start()}}
+                {{convent.end()}}
+            </td>
+        </tr>
+    {% endcall %}
+{% endblock %}
 
-                            <tbody>
-                                {%- for convent in convents %}
-                                    <tr{%- if choosed_id == convent.id %} class="danger" {% endif -%}>
-                                        <td>
-                                            {{convent.name}}
-                                        </td>
-                                        <td>
-                                            {{convent.state}}
-                                        </td>
-                                        <td>
-                                            {{convent.switch()}}
-                                            {{convent.delete()}}
-                                            {{convent.start()}}
-                                            {{convent.end()}}
-                                        </td>
-                                {%- endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-            </div>
-        </div>
-    </div>
+{% block js %}
+    <script src="{{static('/js/plugins/dataTables/jquery.dataTables.js')}}"></script>
+    <script src="{{static('/js/plugins/dataTables/dataTables.bootstrap.js')}}"></script>
+    <script type="text/javascript">
+    $(document).ready(function() {
+        $('#convents_table').dataTable({
+            "paging":   false,
+            'bFilter': false
+        });
+    });
+    </script>
 {% endblock %}
