--- a/src/konwentor/application/templates/table.jinja2
+++ b/src/konwentor/application/templates/table.jinja2
@@ -2,7 +2,9 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
-                <div class="panel-heading">{{title()}}</div>
+                {% if title -%}
+                    <div class="panel-heading">{{title()}}</div>
+                {%- endif %}
                 <div class="panel-body">
                     <div class="table-responsive">
                         <table id="{{id}}" class="table table-striped table-bordered table-hover">
