--- a/src/konwentor/application/templates/convent/widget/start_button.jinja2
+++ b/src/konwentor/application/templates/convent/widget/start_button.jinja2
@@ -1,1 +1,11 @@
-<a href="{{url}}" class="btn btn-xs btn-warning">Rozpocznij</a>
+{% from "modal.jinja2" import modal %}
+
+{% macro  title() %}Jesteś pewien?{% endmacro %}
+
+{% macro  btn() %}<a href="{{url}}" class="btn btn-warning">Akceptuj</a>{% endmacro %}
+
+{% call modal("return_modal_" ~ convent.id, "btn-xs btn-warning", "Rozpocznij", title, btn) %}
+    Jeseś pewien, że chcesz rozpocząc konwent "<strong>{{convent.name}}</strong>"?
+{% endcall %}
+
+
